feat: added creation sources to item prototypes & implemented black market resource purchasing
